Account for gradle/gradle#18647
Signed-off-by: Daniel Lacasse <daniel@nokee.dev>